--- a/css/style.css
+++ b/css/style.css
@@ -1375,6 +1375,16 @@ body.writing-detail .detail-tag {
   padding: 3rem 2rem;
   color: rgba(255, 255, 255, 0.2);
   font-size: 0.78rem;
+  position: relative;
+}
+
+.footer::before {
+  content: '';
+  display: block;
+  width: 50px;
+  height: 1px;
+  background: rgba(255, 255, 255, 0.15);
+  margin: 0 auto 1.5rem;
 }
 
 .footer-credit {
