--- a/css/style.css
+++ b/css/style.css
@@ -1381,12 +1381,12 @@ body.writing-detail .detail-tag {
 .footer::before {
   content: '';
   display: block;
-  width: 45%;
-  max-width: 450px;
-  height: 30px;
+  width: 80%;
+  max-width: 600px;
+  height: 60px;
   margin: 0 auto 1.5rem;
-  background: url('../assets/flute-divider.svg') center / contain no-repeat;
-  opacity: 0.7;
+  background: url('../assets/am-signal.svg') center / contain no-repeat;
+  opacity: 0.8;
 }
 
 .footer-credit {
